[gd_scene load_steps=5 format=3 uid="uid://bfk2h83axywy1"]

[ext_resource type="Script" path="res://Scripts/Interfaces/fire_control_interface.gd" id="1_iliv8"]
[ext_resource type="Script" path="res://Scripts/Interfaces/water_lable.gd" id="2_80cb6"]
[ext_resource type="Texture2D" uid="uid://bh4bk6c6yf6l1" path="res://Imports/images/2d_ui_bg.png" id="2_w57qc"]
[ext_resource type="Script" path="res://Scripts/Interfaces/fire_info_label.gd" id="4_lxqwj"]

[node name="fire_control_interface" type="Node2D"]
script = ExtResource("1_iliv8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.08, 1.08)
texture = ExtResource("2_w57qc")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Button" type="Button" parent="."]
offset_left = -831.0
offset_top = 100.0
offset_right = -631.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 35
text = "Extinguish"

[node name="Button2" type="Button" parent="."]
offset_left = -250.0
offset_top = 100.0
offset_right = -50.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 35
text = "Extinguish"

[node name="Button3" type="Button" parent="."]
offset_left = 50.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 35
text = "Extinguish"

[node name="Button4" type="Button" parent="."]
offset_left = -550.0
offset_top = -72.0
offset_right = -350.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 35
text = "Extinguish"

[node name="Button5" type="Button" parent="."]
offset_left = -550.0
offset_top = -248.0
offset_right = -350.0
offset_bottom = -148.0
theme_override_font_sizes/font_size = 35
text = "Extinguish"

[node name="Button6" type="Button" parent="."]
offset_left = -550.0
offset_top = -431.0
offset_right = -350.0
offset_bottom = -331.0
theme_override_font_sizes/font_size = 35
text = "Extinguish"

[node name="BackButton" type="Button" parent="."]
offset_left = -72.0
offset_top = -430.0
offset_right = 328.0
offset_bottom = -230.0
theme_override_font_sizes/font_size = 70
text = "Back"

[node name="WaterLable" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -906.0
offset_top = -448.0
offset_right = -725.0
offset_bottom = -379.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
script = ExtResource("2_80cb6")

[node name="fire_info_label1" type="Label" parent="."]
offset_left = -906.0
offset_top = 200.0
offset_right = -578.0
offset_bottom = 242.0
theme_override_font_sizes/font_size = 30
text = "Watered by Terminal 6"
script = ExtResource("4_lxqwj")

[node name="fire_info_label2" type="Label" parent="."]
offset_left = -379.0
offset_top = 202.0
offset_right = -51.0
offset_bottom = 244.0
theme_override_font_sizes/font_size = 30
text = "Watered by Terminal 6"
script = ExtResource("4_lxqwj")

[node name="fire_info_label3" type="Label" parent="."]
offset_left = 18.0
offset_top = 200.0
offset_right = 346.0
offset_bottom = 242.0
theme_override_font_sizes/font_size = 30
text = "Watered by Terminal 6"
script = ExtResource("4_lxqwj")

[node name="fire_info_label4" type="Label" parent="."]
offset_left = -610.0
offset_top = 28.0
offset_right = -282.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 30
text = "Watered by Terminal 6"
script = ExtResource("4_lxqwj")

[node name="fire_info_label5" type="Label" parent="."]
offset_left = -610.0
offset_top = -148.0
offset_right = -282.0
offset_bottom = -106.0
theme_override_font_sizes/font_size = 30
text = "Watered by Terminal 6"
script = ExtResource("4_lxqwj")

[node name="fire_info_label6" type="Label" parent="."]
offset_left = -610.0
offset_top = -331.0
offset_right = -282.0
offset_bottom = -289.0
theme_override_font_sizes/font_size = 30
text = "Watered by Terminal 6"
script = ExtResource("4_lxqwj")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
